# lcrq

./: .gitignore  CHANGELOG.md  COPYING  Makefile  Makefile.in  README.md  TODO  configure  configure.ac
doc/: .gitignore  Makefile.in  lcrq.7  rq_F.3  rq_decode.3  rq_decode_block_rfc.3  rq_encode.3  rq_encode_data_rfc.3  rq_free.3  rq_init.3  rq_pid2esi.3  rq_pid2sbn.3  rq_pkt_gen.3  rq_query.3  rq_symbol.3
examples/: .gitignore  Makefile.in  gather.c  params.c  scatter.c
include/: lcrq.h  lcrq.h.in
src/: Makefile  Makefile.in  config.h.in  cpu.c  cpu.h  gf256.c  gf256.h  gf256_ssse3.c  lcrq.c  lcrq_avx2.c  lcrq_pvt.h  lcrq_sse2.c  matrix.c  matrix.h  matrix_avx2.c  matrix_sse2.c  matrix_ssse3.c
test/: .gitignore  0000-0000.c  0000-0001.c  0000-0002.c  0000-0003.c  0000-0005.c  0000-0006.c  0000-0007.c  0000-0008.c  0000-0009.c  0000-0010.c  0000-0011.c  0000-0012.c  0000-0013.c  0000-0014.c  0000-0018.c  0000-0019.c  0000-0020.c  0000-0021.c  0000-0022.c  0000-0023.c  0000-0024.c  0001-0000.c  0001-0001.c  0001-0002.c  0001-0003.c  0001-0004.c  Makefile  Makefile.in  falloc.c  falloc.h  hdpc.k1.txt  hdpc.k4242.txt  hdpc.k60.txt  ldpc.k1.txt  ldpc.k4242.txt  ldpc.k60.txt  log.c  log.h  speedtest.00.c  (+2 more)
test/all/: 0000-0000.test  0000-0001.test  0000-0002.test  0000-0003.test  0000-0005.test  0000-0010.test  0000-0011.test  0000-0019.test  0000-0020.test  0000-0021.test  0000-0022.test  0000-0023.test  0000-0024.test  0001-0000.test  0001-0001.test  0001-0002.test  0001-0003.test  0001-0004.test
